--- a/cs/investment.html
+++ b/cs/investment.html
@@ -163,21 +163,21 @@
     <main>
       <div class="investment">
         <div class="investment__wrapper">
-          <div class="investment-body">
-            <div class="investment-body-content">
+          <div class="investment-body investment-body-cs">
+            <div class="investment-body-content investment-body-content-cs">
 
               <h1 class="investment-body__title">Zveme <br><span class="investment-body__title_color">investory</span></h1>
-              <p class="investment-body__text">V současné době je projekt financován na úkor vlastních prostředků a prostředků investorů.</p>
-              <p class="investment-body__text">Naším hlavním cílem při práci s investory — je X100<br> pro investory</p>
-              <ul class="lead__download-links-list">
+              <p class="investment-body__text investment-body__text-cs">V současné době je projekt financován na úkor vlastních prostředků a prostředků investorů.</p>
+              <p class="investment-body__text investment-body__text-cs">Naším hlavním cílem při práci s investory — je X100<br> pro investory</p>
+              <ul class="lead__download-links-list lead__download-links-list-cs">
                 <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_type_android-cs">Stáhnout na Android</a></li>
                 <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_type_ios-invest">Stáhnout na IOS</a></li>
 
               </ul>
             </div>
-            <div class="investment__column">
+            <!-- <div class="investment__column">
               <img class="investment__image ibg" src="../assets/en-img/invest.png" alt="Telefon iPhone investice">
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
