--- a/en/investment.html
+++ b/en/investment.html
@@ -164,19 +164,19 @@
     <main>
       <div class="investment">
         <div class="investment__wrapper">
-          <div class="investment-body">
-            <div class="investment-body-content">
+          <div class="investment-body investment-body-eng">
+            <div class="investment-body-content investment-body-content-eng">
               <h1 class="investment-body__title">We invite <br><span class="investment-body__title_color"> investors</span></h1>
-              <p class="investment-body__text">At the moment, the financing of the project is carried out using own funds and investors' funds.</p>
-              <p class="investment-body__text">Our main goal in working with investors is X100 for investors</p>
-              <ul class="lead__download-links-list">
+              <p class="investment-body__text investment-body__text-eng">At the moment, the financing of the project is carried out using own funds and investors' funds.</p>
+              <p class="investment-body__text investment-body__text-eng">Our main goal in working with investors is X100 for investors</p>
+              <ul class="lead__download-links-list lead__download-links-list-eng">
                 <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android button_type_android-en">Download on Android</a></li>
                 <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios button_type_ios-invest">Download on iOS</a></li>
               </ul>
             </div>
-            <div class="investment__column">
+            <!-- <div class="investment__column">
               <img class="investment__image ibg" src="../assets/en-img/invest.png" alt="Phone iPhone Investment">
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
