--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 
 	<head>
@@ -343,8 +344,8 @@
 					<a class="card-block__link eng-card-block__link"  href="./en/apps.html">SFERA Applications &#8702; </a>
 				</div>
 			</div>
-		</div>
-		</section> 
+		  </div>
+		</section>
 		<section class="block-seven" id="download">
 				<div>
 					<img src="./assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
