--- a/en/startups.html
+++ b/en/startups.html
@@ -235,7 +235,7 @@
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="https://www.youtube.com/@sfera_zone"target="_blank" title="Our YouTube channel">YouTube</a></li>
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href=" https://www.tiktok.com/@project_sfera"target="_blank" title="We are iTiktok">TikTok </a></li>
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="https://vk.com/projectsfera"target="_blank" title="We are VKontakte">VKontakte</a></li>
-						<li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href=" https://dzen.ru/sferalive"target="_blank" title="We are Zen">Dzen</a></li>
+						<!-- <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href=" https://dzen.ru/sferalive"target="_blank" title="We are Zen">Dzen</a></li> -->
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
           </ul>
         </div>
