--- a/cs/apps.html
+++ b/cs/apps.html
@@ -125,7 +125,7 @@
 
                   <li class="lang_tablet" >
                     <div class="img_lang">
-                        <img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
+                        <img class="img_lang-tablet"loading="lazy" src="../assets/img/language_tablet.png" alt="">
                     </div>
                     <div class="list_lang-tablet">
                         <a class="lang_list-link" href="./../en/apps.html"> Angličtina</a>
@@ -219,8 +219,8 @@
 
                     <li class="apps__briefs-item">
                       <div class="apps__brief-images-container"id="profile">
-                        <div class="apps__brief-image-wrapper" ><img src="../assets/en-img/profile_ios.png" class="apps__brief-image" alt="Hlavní profil iPhone" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/profile_android.png" class="apps__brief-image" alt="Hlavní profil Android" /></div>
+                        <div class="apps__brief-image-wrapper" ><img src="../assets/en-img/profile_ios.png" class="apps__brief-image"loading="lazy" alt="Hlavní profil iPhone" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/profile_android.png" class="apps__brief-image"loading="lazy" alt="Hlavní profil Android" /></div>
                     </div>
                         <div class="apps__brief-text-container">
 
@@ -243,8 +243,8 @@
 
                     <li class="apps__briefs-item"  id="lenta">
                       <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/lentaios.png" class="apps__brief-image" alt="IPhone news feed" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/lentaandroid.png" class="apps__brief-image" alt="Android News Feed" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/lentaios.png" class="apps__brief-image"loading="lazy" alt="IPhone news feed" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/lentaandroid.png" class="apps__brief-image"loading="lazy" alt="Android News Feed" /></div>
                     </div>
                         <div class="apps__brief-text-container">
 
@@ -267,8 +267,8 @@
 
                     <li class="apps__briefs-item"  id="asap">
                       <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/asapios.png" class="apps__brief-image" alt="IPhone posla" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/asaspandroid.png" class="apps__brief-image" alt="Posel Android " /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/asapios.png" class="apps__brief-image"loading="lazy" alt="IPhone posla" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/en-img/asaspandroid.png" class="apps__brief-image"loading="lazy" alt="Posel Android " /></div>
                       </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">ASAP</h2>
@@ -291,8 +291,8 @@
 
                     <li class="apps__briefs-item" id="meetnet">
                       <div class="apps__brief-images-container">
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_ios.png" class="apps__brief-image" alt="Seznamovací služba iPhone" /></div>
-                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_android.png" class="apps__brief-image" alt="Seznamovací služba Android" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_ios.png" class="apps__brief-image"loading="lazy" alt="Seznamovací služba iPhone" /></div>
+                        <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/meetnet_android.png" class="apps__brief-image" loading="lazy"alt="Seznamovací služba Android" /></div>
                     </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Meetnet</h2>
@@ -312,18 +312,16 @@
                         <li></li>
                         </ul>
                     </li>
-
                     <li class="apps__briefs-item"id="choose">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/Chooseios.png" class="apps__brief-image" alt="analytika, krásné fotky " /></div>
-                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/Chooseandroid.png" class="apps__brief-image" alt="analytika, krásné fotky " /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/Chooseios.png" class="apps__brief-image" loading="lazy"alt="analytika, krásné fotky " /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/Chooseandroid.png" class="apps__brief-image"loading="lazy" alt="analytika, krásné fotky " /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Choose</h2>
-                         <p class="apps__brief-text">Nevíte co je lepší? Využijte tento servis a zjistěte názor publika. V budoucnu to bude pro podniky účinný nástroj k provádění analytických průzkumů.</p>
-
+                          <p class="apps__brief-text">Nevíte co je lepší? Využijte tento servis a zjistěte názor publika. V budoucnu to bude pro podniky účinný nástroj k provádění analytických průzkumů.</p>
                         </div>
                         <ul class="apps__briefs-item-list">
                           <li></li>
@@ -341,8 +339,8 @@
                     <li class="apps__briefs-item"id="blackbox">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_ios.png" class="apps__brief-image" alt="nová komunikace o geolokaci" /></div>
-                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_android.png" class="apps__brief-image" alt="nová komunikace o geolokaci" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_ios.png" class="apps__brief-image"loading="lazy" alt="nová komunikace o geolokaci" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/blackbox_android.png" class="apps__brief-image"loading="lazy" alt="nová komunikace o geolokaci" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -368,8 +366,8 @@
                     <li class="apps__briefs-item" id="videos">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/videosios.png" class="apps__brief-image" alt="Video servis" /></div>
-                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/videosandroid.png"class="apps__brief-image" alt="Video servis" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/videosios.png" class="apps__brief-image"loading="lazy" loading="lazy" alt="Video servis" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/videosandroid.png"class="apps__brief-image"loading="lazy" alt="Video servis" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -394,8 +392,8 @@
                     <li class="apps__briefs-item" id="joblite">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/JL.png" class="apps__brief-image" alt="aplikace pro hledání práce iPhone" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/JL2.png" class="apps__brief-image" alt="aplikace pro hledání práce Android" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/JL.png" class="apps__brief-image"loading="lazy" alt="aplikace pro hledání práce iPhone" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/JL2.png" class="apps__brief-image" loading="lazy"alt="aplikace pro hledání práce Android" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -421,8 +419,8 @@
                     <li class="apps__briefs-item">
                       <div class="apps__brief-images-container" id="findfriend">
                         <div class="apps__brief-images-container" >
-                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/findfriendios.png" class="apps__brief-image" alt="hledání nových přátel v reálném offline životě" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/findfriendandroid.png" class="apps__brief-image" alt="hledání nových přátel v reálném offline životě" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/findfriendios.png" class="apps__brief-image" loading="lazy"alt="hledání nových přátel v reálném offline životě" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/findfriendandroid.png" loading="lazy"class="apps__brief-image" alt="hledání nových přátel v reálném offline životě" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -456,29 +454,29 @@
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
 
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png" class="swiper-slide__image" alt="Události"/></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png" class="swiper-slide__image"loading="lazy" alt="Události"/></div>
                             <p class="swiper-slide__title">Události</p>
 
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/fm.png" class="swiper-slide__image" alt="FM-kanály"/></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/fm.png" class="swiper-slide__image"loading="lazy" alt="FM-kanály"/></div>
                             <p class="swiper-slide__title">FM-kanály</p>
 
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/voice.png" class="swiper-slide__image" alt="Hlasový kanál"  /></div>
-                           <p class="swiper-slide__title">Hlasové kanály</p>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/voice.png" class="swiper-slide__image" loading="lazy" alt="Hlasový kanál"  /></div>
+                            <p class="swiper-slide__title">Hlasové kanály</p>
 
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
 
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/book.png"class="swiper-slide__image" alt="Knihy"/></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/book.png"class="swiper-slide__image"loading="lazy" alt="Knihy"/></div>
                             <p class="swiper-slide__title">Knihy</p>
 
                         </div>
@@ -486,15 +484,14 @@
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
 
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/talents.png" class="swiper-slide__image" alt="Talenty"/></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/talents.png" class="swiper-slide__image" loading="lazy" alt="Talenty"/></div>
                             <p class="swiper-slide__title">Talenty</p>
 
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" alt="Práce a podnikání" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image"loading="lazy" alt="Práce a podnikání" /></div>
 
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
@@ -511,47 +508,41 @@
               <div class="swiper-wrapper apps__future-slide">
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/camedy.png" class="swiper-slide__image" alt="Komediální páska"/></div>
-
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/camedy.png" class="swiper-slide__image"loading="lazy" alt="Komediální páska"/></div>
                           <p class="swiper-slide__title">Comedy-feed</p>
-
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/spor-t.png" class="swiper-slide__image" alt="Sport" /></div>
-
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/spor-t.png" class="swiper-slide__image"loading="lazy" alt="Sport" /></div>
                           <p class="swiper-slide__title">Spor-T</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
 
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/stravel.png" class="swiper-slide__image" alt="Cestování" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/stravel.png" class="swiper-slide__image" loading="lazy" alt="Cestování" /></div>
 
                           <p class="swiper-slide__title">sTravel</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/industr.png"class="swiper-slide__image" alt="Novinky z oboru" /></div>
-
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/industr.png"class="swiper-slide__image"loading="lazy" alt="Novinky z oboru" /></div>
                           <p class="swiper-slide__title">Industry news</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
 
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/artlab.png" class="swiper-slide__image" alt="Art Lab" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/artlab.png" class="swiper-slide__image" loading="lazy" alt="Art Lab" /></div>
 
                           <p class="swiper-slide__title">Art Lab</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" alt="Kalendář" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" loading="lazy" alt="Kalendář" /></div>
                           <p class="swiper-slide__title">Calendar</p>
                       </div>
                   </div>
