--- a/cs/investment.html
+++ b/cs/investment.html
@@ -197,7 +197,7 @@
                 <p id="card-body__list_2" class="card-body__list_2" type="text" >4584-4328-3958-7574<button onclick="copyText()" class="card-body__list_copy"><img src="../assets/img/investment/content_copy.svg" alt="img"></button></p> -->
 
                 <li class="card-body__list_3"> Pošlete E-mail s uvedením částky transakce. Zpětným dopisem my potvrdíme vámi zaslanou částku a spojíme ji s vaším E-mail.</li>
-                <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><img src="../assets/img/investment/content_copy.svg" alt=""></button></div>
+                <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><img src="../assets/img/investment/content_copy.svg" alt="Card" loading="lazy"></button></div>
               </ol>
               <div class="card-body__text">Při uskutečňování transakce potvrzujete, že jasně rozumíte základům a pojmu investování rizikového kapitálu a principům startupu a také všem rizikům s tím spojeným.</div>
             </div>
