--- a/cs/startups.html
+++ b/cs/startups.html
@@ -177,7 +177,7 @@
               </div>
             </div>
             <div class="lead__images">
-              <img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" alt="Айфон про сфера" /></div>
+              <img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" loading="lazy" alt="ios" /></div>
             </div>
           </div>
     </section>
@@ -205,8 +205,7 @@
       <div class="frame__wrapper">
         <div class="frame__list__main">
           <ul  class="frame__list">
-            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="Aplikace SFERA " /></li>
-
+            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="Aplikace SFERA " loading="lazy" /></li>
             <li class="frame__list__item">My počítáme s tím, že mnoho servisů jsou pro uživatele jistě užitečné a nezbytné, ale často se kvůli vysokým nákladům na vývoj nebo nákladům na přilákání uživatele stává realizace projektů nemožná. V rámci projektu SFERA jsou náklady na vývoj několikanásobně sníženy a není třeba nést finanční náklady na marketing.</li>
 
           </ul>
