--- a/en/downloads.html
+++ b/en/downloads.html
@@ -175,9 +175,9 @@
             </div>
             <div class="lead__images">
               <div class="lead__image__ios">
-                <img src="../assets/en-img/ios.png" class="lead__image" alt="android phone app" /></div>
+                <img src="../assets/en-img/ios.png" class="lead__image" alt="android phone app" loading="lazy" /></div>
               <div class="lead__image__android">
-                <img src="../assets/en-img/android .png" class="lead__image" alt="phone app iphone" /></div>
+                <img src="../assets/en-img/android .png" class="lead__image" alt="phone app iphone" loading="lazy"/></div>
             </div>
           </div>
         </div>
@@ -191,38 +191,6 @@
       </section>
     </main>
   </div>
-    <!-- <footer class="footer section section_theme_dark" role="footer">
-      <div class="footer__container">
-        <div class="footer__contacts">
-          <h2 class="footer__title">Contacts</h2>
-          <ul class="contacts-list">
-            <li class="contacts-list__item">For jobs:<a class="link link_theme_dark contacts-list__link" href="mailto:info@sfera.zone">info@sfera.zone</a></li>
-            <li class="contacts-list__item">For investors: <a class="link link_theme_dark contacts-list__link" href="invest@sfera.zone">invest@sfera.zone</a></li>
-            <li class="contacts-list__item">WhatsApp of the founder: <a class="link link_theme_dark contacts-list__link nowrap" href="https://api.whatsapp.com/send/?phone=420774715626">+420 774715626</a></li>
-          </ul>
-        </div>
-        <div class="footer__download-links">
-          <h2 class="footer__title color_grey">We will not change the world.<br>We'll rewrite the code.</h2>
-          <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Download on Android </a></li>
-            <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
-          </ul>
-        </div>
-        <div class="footer__social-links">
-          <ul class="socials-list">
-            <li class="socials-list__item"><a class="socials-list_type_youtube" href="#" title="Our YouTube channel">YouTube</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_tiktok" href="#" title="We are iTiktok">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list_type_vk" href="#" title="We are VKontakte">VKontakte</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_dzen" href="#" title="We are Zen">Zen</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_instagram" href="#" title="Our Instagram">Instagram </a></li>
-          </ul>
-        </div>
-				<a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
-        <div class="footer__copyright">
-          <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
-          <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
-        </div>
-      </div></footer> -->
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
   <script src="assets/js/main.4.befb3660.js" defer></script>
   <script src="../assets/js/main.js"></script>
