--- a/en/startups.html
+++ b/en/startups.html
@@ -179,7 +179,7 @@
               </div>
             </div>
             <div class="lead__images">
-              <img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" alt="iPhone pro sphere" /></div>
+              <img src="../assets/img/startups-png/iphone_12_pro.png" class="lead__image" alt="iPhone pro sphere" loading="lazy"/></div>
             </div>
           </div>
     </section>
@@ -206,7 +206,7 @@
       <div class="frame__wrapper">
         <div class="frame__list__main">
           <ul  class="frame__list">
-            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="The SFERA application" /></li>
+            <li class="frame__list__item"><img class="frame__list__image" src="../assets/img/startups-png/sfera.png" alt="The SFERA application" loading="lazy"/></li>
             <li class="frame__list__item">We believe that many services are certainly useful and necessary for users, but often, due to the high cost of development or the cost of attracting a user, the implementation of projects becomes impossible. As part of the SFERA project, the cost of development is reduced several times and there is no need to incur financial costs for marketing.</li>
           </ul>
         </div>
