--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -174,9 +174,9 @@
             </div>
             <div class="lead__images">
               <div class="lead__image__ios">
-                <img src="../assets/image-lending/1920/block 1-1.png" class="lead__image" alt="телефон приложение андроид" /></div>
+                <img src="../assets/image-lending/1920/block 1-1.png" class="lead__image" alt="телефон приложение андроид"loading="lazy" /></div>
               <div class="lead__image__android">
-                <img src="../assets/image-lending/1920/block 1-2.png" class="lead__image" alt="телефон приложение айфон" /></div>
+                <img src="../assets/image-lending/1920/block 1-2.png" class="lead__image" alt="телефон приложение айфон" loading="lazy"/></div>
             </div>
           </div>
         </div>
@@ -189,40 +189,6 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer section section_theme_dark" role="footer">
-      <div class="footer__container">
-        <div class="footer__contacts">
-          <h2 class="footer__title">Контакты</h2>
-          <ul class="contacts-list">
-            <li class="contacts-list__item">По общим вопросам: <a class="link link_theme_dark contacts-list__link" href="mailto:info@sfera.zone">info@sfera.zone</a></li>
-            <li class="contacts-list__item">Для инвесторов: <a class="link link_theme_dark contacts-list__link" href="invest@sfera.zone">invest@sfera.zone</a></li>
-            <li class="contacts-list__item">По вопросам работы: <a class="link link_theme_dark contacts-list__link" href="rabota@sfera.zone">rabota@sfera.zone</a></li>
-            <li class="contacts-list__item">WhatsApp основателя: <a class="link link_theme_dark contacts-list__link nowrap" href="https://api.whatsapp.com/send/?phone=420774715626">+420 776 419 030</a></li>
-          </ul>
-        </div>
-        <div class="footer__download-links">
-          <h2 class="footer__title color_grey">Мы не будем менять мир.<br> Мы перепишем код.</h2>
-          <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-            <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
-          </ul>
-        </div>
-        <div class="footer__social-links">
-          <ul class="socials-list">
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="#" title="Наш канал в Ютубе">YouTube</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href="#" title="Мы в ТикТоке">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="Мы Дзене">Дзен</a></li>
-            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
-          </ul>
-        </div>
-        <a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
-        <div class="footer__copyright">
-          <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">Положение SFERA</a></p>
-          <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — Проект SFERA | Все права защищены ООО «СФЕРА»</p>
-        </div>
-      </div>
-    </footer> -->
   </div>
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
   <script src="assets/js/main.4.befb3660.js" defer></script>
