--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<span ><img class="section-two-image-one" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="Android menu"></span>
-					<span><img class="section-two-image-two" src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="iPhone menu"></span>
+					<span ><img class="section-two-image-one" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="Android menu"></span>
+					<span><img class="section-two-image-two"loading="lazy" src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="iPhone menu"></span>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
@@ -225,10 +225,10 @@
 						<button class="card-block-top">ASAP</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<img class="front" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone">
+								<img class="front" loading="lazy" src="assets/animation en/IOS/01-asap-ios-eng.gif" alt="ASAP iPhone">
 							</div>
 							<div class="product-back">
-								<img class="back"src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP android">
+								<img class="back" loading="lazy"src="assets/animation en/ANDROID/01-asap-android-eng.gif" alt="ASAP android">
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -238,10 +238,10 @@
 					<button class="card-block-top">Profile</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" src="assets/animation en/IOS/02-profile-ios-eng.gif" alt="iPhone Profile">
+								<img class="front" loading="lazy" src="assets/animation en/IOS/02-profile-ios-eng.gif" alt="iPhone Profile">
 						</div>
 						<div class="product-back">
-								<img class="back" src="assets/animation en/ANDROID/02-profile-android-eng.gif" alt="Android Profile">
+								<img class="back" loading="lazy" src="assets/animation en/ANDROID/02-profile-android-eng.gif" alt="Android Profile">
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -251,10 +251,10 @@
 					<button class="card-block-top">Feed</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" src="assets/animation en/IOS/03-lenta-ios-eng.gif" alt="iPhone News Feed">
+								<img class="front" loading="lazy" src="assets/animation en/IOS/03-lenta-ios-eng.gif" alt="iPhone News Feed">
 						</div>
 						<div class="product-back">
-								<img class="back" src="assets/animation en/ANDROID/03-lenta-android-eng.gif" alt="Android News Feed">
+								<img class="back" loading="lazy" src="assets/animation en/ANDROID/03-lenta-android-eng.gif" alt="Android News Feed">
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -264,10 +264,10 @@
 					<button class="card-block-top">VideoS</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img  class="front" src="assets/animation en/IOS/04-videos-ios-eng.gif" alt="Video on iPhone">
+								<img  class="front" loading="lazy" loading="lazy" src="assets/animation en/IOS/04-videos-ios-eng.gif" alt="Video on iPhone">
 						</div>
 						<div class="product-back">
-								<img class="back" src="assets/animation en/ANDROID/04-videos-android-eng.gif" alt="Videos on android">
+								<img class="back" loading="lazy" src="assets/animation en/ANDROID/04-videos-android-eng.gif" alt="Videos on android">
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -280,7 +280,7 @@
 								<img class="front" src="assets/animation en/IOS/05-black-box-ios-eng.gif" alt="Blackbox iPhone">
 						</div>
 						<div class="product-back">
-								<img class="back" src="assets/animation en/ANDROID/05-black-box-android-eng.gif" alt="Blackbox android">
+								<img class="back" loading="lazy" src="assets/animation en/ANDROID/05-black-box-android-eng.gif" alt="Blackbox android">
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -290,10 +290,10 @@
 					<button class="card-block-top">FindFriends</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" src="assets/animation en/IOS/06-FF-ios-eng.gif" alt="Search for friends">
+								<img class="front" loading="lazy" src="assets/animation en/IOS/06-FF-ios-eng.gif" alt="Search for friends">
 						</div>
 						<div class="product-back">
-								<img class="back" src="assets/animation en/ANDROID/06-FF-android-eng.gif" alt="Search for friends">
+								<img class="back" loading="lazy" src="assets/animation en/ANDROID/06-FF-android-eng.gif" alt="Search for friends">
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -304,11 +304,11 @@
 					<div class="product-inner eng-product-inner">
 						<div class="product-front eng-product-front">
 							<div>
-								<img class="front eng-front" src="assets/animation en/IOS/07-Meet-Net-ios-eng.gif" alt="Find a soul mate">
+								<img class="front eng-front" loading="lazy"src="assets/animation en/IOS/07-Meet-Net-ios-eng.gif" alt="Find a soul mate">
 							</div>
 						</div>
 						<div class="product-back">
-								<img class="back" src="assets/animation en/ANDROID/07-Meet-Net-android-eng.gif" alt="Find a soul mate">
+								<img class="back" loading="lazy" src="assets/animation en/ANDROID/07-Meet-Net-android-eng.gif" alt="Find a soul mate">
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -318,10 +318,10 @@
 					<button class="card-block-top">JobLite</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" src="assets/animation en/IOS/08-Job-Lite-ios-eng.gif" alt="Job search"> 
+								<img class="front" loading="lazy" src="assets/animation en/IOS/08-Job-Lite-ios-eng.gif" alt="Job search"> 
 						</div>
 						<div class="product-back">
-								<img class="back" src="assets/animation en/ANDROID/08-Job-Lite-android-eng.gif" alt="Job search">
+								<img class="back" loading="lazy" src="assets/animation en/ANDROID/08-Job-Lite-android-eng.gif" alt="Job search">
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -331,10 +331,10 @@
 					<button class="card-block-top">Choose</button>
 					<div class="product-inner">
 						<div class="product-front">
-								<img class="front" src="assets/animation en/IOS/09-Choose-ios-eng.gif" alt="Beautiful iPhone pictures">
+								<img class="front" loading="lazy" src="assets/animation en/IOS/09-Choose-ios-eng.gif" alt="Beautiful iPhone pictures">
 						</div>
 						<div class="product-back">
-								<img class="back" src="assets/animation en/ANDROID/09-Choose-android-eng.gif" alt="Beautiful iPhone pictures">
+								<img class="back" loading="lazy" src="assets/animation en/ANDROID/09-Choose-android-eng.gif" alt="Beautiful iPhone pictures">
 						</div>
 						<div class="left-side "></div>
 					</div>
@@ -348,7 +348,7 @@
 		</section>
 		<section class="block-seven" id="download">
 				<div>
-					<img src="./assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
+					<img loading="lazy" src="./assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
 				</div>
 				<div>
 					<div class="block-seven-paragraf">
@@ -367,19 +367,19 @@
 				<p class="about-as-heading-last">NOW WE HAVE <span class="about-as-heading-color">MORE THAN 20 SERVICES</span>IN DEVELOPMENT</p>
 				<ul class="block-eight-card">
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/1 921.png" alt="Events">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/1 921.png" alt="Events">
 						<p class="block-eight-card-list-paragraf">Events</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/2 24.png" alt="Live broadcasts">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/2 24.png" alt="Live broadcasts">
 						<p class="block-eight-card-list-paragraf">FM channels</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/3.png" alt="Voice channel">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/3.png" alt="Voice channel">
 						<p class="block-eight-card-list-paragraf">Voice  <br>channels</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/4.png" alt="Books">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/4.png" alt="Books">
 						<p class="block-eight-card-list-paragraf">Books</p>
 					</li>
 					<li class="block-eight-card-list">
@@ -387,31 +387,31 @@
 						<p class="block-eight-card-list-paragraf">Talents</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/6.png" alt="Work and business">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/6.png" alt="Work and business">
 						<p class="block-eight-card-list-paragraf">Work & <br> Business</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/9.png" alt="Sports nutrition Diet">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/9.png" alt="Sports nutrition Diet">
 						<p class="block-eight-card-list-paragraf">Spor-T</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/8.png" alt="Comedy Feed">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/8.png" alt="Comedy Feed">
 						<p class="block-eight-card-list-paragraf">Comedy Feed</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/10.png" alt="Travel hotels where to travel ">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/10.png" alt="Travel hotels where to travel ">
 						<p class="block-eight-card-list-paragraf">sTravel</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image"src="./assets/image-lending/general/11.png" alt="Latest news">
+						<img class="block-eight-card-image" loading="lazy"src="./assets/image-lending/general/11.png" alt="Latest news">
 						<p class="block-eight-card-list-paragraf">Industry news</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/12.png" alt="Choreography Music Design">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/12.png" alt="Choreography Music Design">
 						<p class="block-eight-card-list-paragraf">Art Lab</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/13.png" alt="Questions Feed Trends">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/13.png" alt="Questions Feed Trends">
 						<p class="block-eight-card-list-paragraf">Ask Me</p>
 					</li>
 					<li class="block-eight-card-list">
@@ -419,7 +419,7 @@
 						<p class="block-eight-card-list-paragraf">Calendar</p>
 					</li>
 					<li class="block-eight-card-list">
-						<img class="block-eight-card-image" src="./assets/image-lending/general/7.png" alt="White Box">
+						<img class="block-eight-card-image" loading="lazy" src="./assets/image-lending/general/7.png" alt="White Box">
 						<p class="block-eight-card-list-paragraf" >White Box</p>
 					</li>
 					<li class="block-eight-card-list">
