--- a/cs/index.html
+++ b/cs/index.html
@@ -140,7 +140,6 @@
 						<a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
 						<a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
 						<a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><i class="fa-brands fa-vk fa-xl"></i></a>
-						<a class="menu-links" href=" https://dzen.ru/sferalive" target="_blank"><i class="fa-brands fa-yandex fa-xl" ></i></a>
 						<a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
 				</li> 
 					</ul>
@@ -373,7 +372,7 @@
 
 		<section class="block-seven" id="download">
 				<article>
-					<img loading="lazy" src="../assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
+					<img loading="lazy" src="../assets/img/startups-png/sfera.png" alt="image sfera" class="block-seven-image">
 				</article>
 				<article>
 					<div class="block-seven-paragraf">
