--- a/ru/index.html
+++ b/ru/index.html
@@ -378,7 +378,7 @@
 		</section> 
 		<section class="block-seven" id="download">
 				<article>
-					<img src="../assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
+					<img loading="lazy" src="../assets/img/startups-png/sfera.png" alt="image sfera" class="block-seven-image">
 				</article>
 				<article>
 					<div class="block-seven-paragraf">
