--- a/cs/investment.html
+++ b/cs/investment.html
@@ -139,7 +139,6 @@
                 <a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
                 <a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
                 <a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><i class="fa-brands fa-vk fa-xl"></i></a>
-                <a class="menu-links" href=" https://dzen.ru/sferalive" target="_blank"><i class="fa-brands fa-yandex fa-xl" ></i></a>
                 <a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
             </li> 
             </ul>
@@ -175,9 +174,9 @@
 
               </ul>
             </div>
-            <!-- <div class="investment__column">
+            <div class="investment__column">
               <img class="investment__image ibg" src="../assets/en-img/invest.png" alt="Telefon iPhone investice">
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
@@ -291,7 +290,6 @@
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="https://www.youtube.com/@sfera_zone"target="_blank" title="Our YouTube channel">YouTube</a></li>
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href=" https://www.tiktok.com/@project_sfera"target="_blank" title="We are iTiktok">TikTok </a></li>
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="https://vk.com/projectsfera"target="_blank" title="We are VKontakte">VKontakte</a></li>
-						<li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href=" https://dzen.ru/sferalive"target="_blank" title="We are Zen">Dzen</a></li>
 						<li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href=" https://www.instagram.com/sfera_motivator/"target="_blank" title="Our Instagram">Instagram </a></li>
           </ul>
         </div>
