--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="description" content="Описание страницы">
+		<meta name="keywords" content="HTML, CSS, JavaScript">
+		<meta name=«Owner» СОМТЕМТ=«SFERA»>
+		<meta name="author" content="SFERA">
+		<!-- <meta http-equiv="refresh" content="30"> -->
   	<link rel="icon" href="./assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   	<link rel="icon" href="./assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   	<link rel="icon" href="./assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
@@ -141,7 +145,6 @@
 						<a class="menu-links" href="https://www.youtube.com/@sfera_zone" target="_blank"><i class="fa-brands fa-youtube fa-xl"></i></a>
 						<a class="menu-links" href="https://www.tiktok.com/@project_sfera" target="_blank"><i class="fa-brands fa-tiktok fa-xl"></i></a>
 						<a class="menu-links" href="https://vk.com/projectsfera" target="_blank"><i class="fa-brands fa-vk fa-xl"></i></a>
-						<a class="menu-links" href=" https://dzen.ru/sferalive" target="_blank"><i class="fa-brands fa-yandex fa-xl" ></i></a>
 						<a class="menu-links" href=" https://www.instagram.com/sfera_motivator/" target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
 				</li> 
 				</ul>
@@ -348,7 +351,7 @@
 		</section>
 		<section class="block-seven" id="download">
 				<div>
-					<img loading="lazy" src="./assets/image-lending/1920/logosfera.gif" alt="image sfera" class="block-seven-image">
+					<img loading="lazy" src="./assets/img/startups-png/sfera.png" alt="image sfera" class="block-seven-image">
 				</div>
 				<div>
 					<div class="block-seven-paragraf">
