--- a/ru/team.html
+++ b/ru/team.html
@@ -281,6 +281,11 @@
                         <p class="item__person-name">Ярослав <span class="item__person-role">Android разработчик</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/34.png"class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+
+                    <p class="item__person-name">Кирилл<span class="item__person-role">Web разработчик (стажер)</span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/50.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+
                         <p class="item__person-name">Вячеслав <span class="item__person-role">Web разработчик (стажер)</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/35.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
@@ -292,6 +297,27 @@
                     </span><span class="item__image ibg"><img src="../assets/img/team/37.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
 
+                    <p class="item__person-name">Иван<span class="item__person-role">Web разработчик (стажер)</span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/52.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+
+                    <p class="item__person-name">Нурсултан<span class="item__person-role">Web разработчик (стажер)</span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/53.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+
+                    <p class="item__person-name">Арген<span class="item__person-role">Web разработчик(стажер) </span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/49.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+
+                    <p class="item__person-name">Вячеслав<span class="item__person-role">Flutter разработчик(стажер) </span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/48.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+
+                    <p class="item__person-name">Фархат<span class="item__person-role">Flutter разработчик(стажер) </span></p>
+                </span><span class="item__image ibg"><img src="../assets/img/team/51.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
+                <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
+
+
                         <p class="item__person-name">Алена <span class="item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/38.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
@@ -300,6 +326,7 @@
                     </span><span class="item__image ibg"><img src="../assets/img/team/39.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
 
+                    
                         <p class="item__person-name">Амелия <span class="item__person-role">QA</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/40.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Член команды</span></span><span class="item__person"><img />
