--- a/cs/apps.html
+++ b/cs/apps.html
@@ -490,7 +490,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image"loading="lazy" alt="Práce a podnikání" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/Work & Business.png"class="swiper-slide__image"loading="lazy" alt="Práce a podnikání" /></div>
 
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
