--- a/en/apps.html
+++ b/en/apps.html
@@ -462,7 +462,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png" class="swiper-slide__image" loading="lazy" alt="Work and Business" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/Work & Business.png" class="swiper-slide__image" loading="lazy" alt="Work and Business" /></div>
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
                     </div>
