--- a/ru/apps.html
+++ b/ru/apps.html
@@ -452,7 +452,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" loading="lazy" alt="Работа и бизнес" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/Work & Business.png"class="swiper-slide__image" loading="lazy" alt="Работа и бизнес" /></div>
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
                     </div>
