--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 		<meta name="description" content="SFERA is a mobile application that includes messenger, dating, job search, social network and much more. In the SFERE platform, dozens of applications interact closely with each other.">
 		<meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
 		<title>SFERA Project &#x2d; Official website, social network.</title>
-		<link rel="stylesheet" href="assets/css/landing.css">
-		<link rel="stylesheet" href="assets/css/landing-card.css">
-		<link rel="stylesheet" href="assets/css/main.e1ae0bf9.css">
+		<link rel="stylesheet" href="assets/css/landing1.css">
+		<link rel="stylesheet" href="assets/css/landing-card1.css">
+		<link rel="stylesheet" href="assets/css/main.e1ae0bf1.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
-		<link rel="stylesheet" href="assets/css/header.css">
+		<link rel="stylesheet" href="assets/css/header1.css">
 	</head>
 	<body>
 		<div class="page">
