--- a/cs/apps.html
+++ b/cs/apps.html
@@ -11,11 +11,11 @@
   <meta name="description" content="SFERA je mobilní aplikace, která zahrnuje posly, datování, hledání práce, sociální síť a další. V rámci platformy mezi sebou úzce spolupracují desítky aplikací.">
 	<meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
   <title>Oficiální web projektu SFERA, sociální síť.</title>
-  <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/apps.css">
+  <link href="../assets/css/main.e1ae0bf1.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/apps1.css">
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="../assets/css/header1.css">
   <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
 
 </head>
@@ -582,10 +582,8 @@
         </div>
         <a href="#section__landing" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
         <div class="footer__copyright">
-
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">Podmínky používání SFERA</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2023 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a>- Projekt SFERA | Všechna práva jsou vyhrazena SRO «SFERA»</p>
-
         </div>
       </div>
     </footer>
