--- a/en/apps.html
+++ b/en/apps.html
@@ -13,11 +13,11 @@
   <meta name="keywords" content="ASAP, Profile, Feed, Video, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
   <title>SFERA Project &#x2d; Official website, social network.</title>
 
-  <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/apps.css">
+  <link href="../assets/css/main.e1ae0bf1.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/apps1.css">
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="../assets/css/header1.css">
   <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
 </head>
 <body>
