--- a/ru/apps.html
+++ b/ru/apps.html
@@ -11,11 +11,11 @@
   <meta name="description" content="SFERA это мобильное приложение, которое включает в себя мессенджер, знакомства, поиск работы, социальная сеть и многое другое. В платформе СФЕРА десятки приложений тесно взаимодействуют между собой.">
   <meta name="keywords" content="ASAP, Профиль, Лента, Видео, Videos, BlackBox, FindFriends, MeetNet, JobLite, Choose">
   <title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
-  <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
-  <link rel="stylesheet" href="../assets/css/apps.css">
+  <link href="../assets/css/main.e1ae0bf1.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/apps1.css">
   <link rel="stylesheet "href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="../assets/css/header.css">
+  <link rel="stylesheet" href="../assets/css/header1.css">
   <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
 </head>
 
