--- a/ru/index.html
+++ b/ru/index.html
@@ -10,13 +10,12 @@
 		<link rel="icon" href="../assets/img/favicon-16px.51bc9ce7.png" type="image/png" sizes="16x16">
   	<link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
   	<link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
-		<link rel="stylesheet" href="../assets/css/landing.css">
-		<link rel="stylesheet" href="../assets/css/landing-card.css">
-		<link rel="stylesheet" href="../assets/css/main.e1ae0bf9.css">
-
+		<link rel="stylesheet" href="../assets/css/landing1.css">
+		<link rel="stylesheet" href="../assets/css/landing-card1.css">
+		<link rel="stylesheet" href="../assets/css/main.e1ae0bf1.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
-		<link rel="stylesheet" href="../assets/css/header.css">
+		<link rel="stylesheet" href="../assets/css/header1.css">
 	</head>
 	<body>
 		<div class="page">
