--- a/ru/team.html
+++ b/ru/team.html
@@ -10,11 +10,11 @@
     <link rel="icon" href="../assets/img/favicon-32px.89beb086.png" type="image/png" sizes="32x32">
     <link rel="icon" href="../assets/img/favicon-64px.7cf38571.png" type="image/png" sizes="64x64">
     <title>Проект SFERA &#x2d; Официальный сайт, социальная сеть.</title>
-    <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
+    <link href="../assets/css/main.e1ae0bf1.css" rel="stylesheet">
 
-    <link href="../assets/css/team.css" rel="stylesheet">
+    <link href="../assets/css/team1.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/header1.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/d455f88091.css" crossorigin="anonymous">
 </head>
 
